--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <script type='text/javascript' src='https://code.jquery.com/jquery-3.1.1.js'></script>
+<script type='text/javascript' src='config.js'></script>
+<script type='text/javascript' src='routines.js'></script>
+<script type='text/javascript' src='getlit.js'></script>
 <script type='text/javascript' src='main.js'></script>
 </head>
 <body></body>
